# winnow

./: README.md  pyproject.toml
docs/: sas.tex  sds.tex  srs.tex
